syntax = "proto3";

option go_package = "src/proto/profiles;proto";

package alexchatapp;

message Profile {
    uint64 user_id = 1;
    string profile_name = 2;
    string bio = 3;
    string avatar_url = 4;
    string status = 5;
    string last_seen = 6;
}

message GetProfileRequest {
    uint64 user_id = 1;
}

message GetProfileResponse {
    Profile profile = 1;
}

message UpdateProfileRequest {
    string profile_name = 1;
    string bio = 2;
    string avatar_url = 3;
    string status = 4;
    string last_seen = 5;
}

message UpdateProfileResponse {
    string response = 1;
}